# orkestrate

./: .gitignore  .mcp.json  .vercelignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEBUG.md  DESIGN.md  LICENSE  README.md  SECURITY.md  SKILL.md  drizzle.config.ts  dump-telemetry.ts  index.html  inject.ps1  inject_self.ps1  lint-full-output.txt  litellm_config.yaml  mem0_extract.txt  next.config.ts  opencode.json  opencode_messages.json  opencode_parts.json  orkestrate-design-system.md  orkestrate-design.md  package-lock.json  package.json  papers_extracted.json  skills-lock.json  test_inherit.js  tmp-telemetry.json  tsconfig.json  vercel.json
.claude/: settings.local.json
.github/: pull_request_template.md
Agent Notation/: README.md
Audit/: audit-fix-plan.md  audit.md
Design Ref/: Design Analysis  design_critique_spec.md  orkestrate_branding_guide.md  warp_oz_design_ref.md  warp_vs_agentalk_analysis.md
Orkestrate/: Old_ORKESTRATE_FUNDAMENTALS.md  index.html  package.json  request.json  tsconfig.json
Orkestrate/src-tauri/: Cargo.toml  payload.json  tauri.conf.json
Orkestrate/src-tauri/src/: lib.rs  main.rs
Orkestrate/src-tauri/src/ai/: handler.rs  mod.rs
Orkestrate/src-tauri/src/ai/memory/: constants.rs  embeddings.rs  entity.rs  manager.rs  mod.rs  proactive.rs  profile.rs  retrieval.rs  scoring.rs  service.rs  session.rs  signals.rs  storage.rs
Orkestrate/src-tauri/src/ai/memory/extraction/: analyzer.rs  extractors.rs  mod.rs  types.rs  validator.rs
Orkestrate/src-tauri/src/ai/tools/: mod.rs
Orkestrate/src-tauri/src/ai/tools/descriptions/: fetch_url.txt  search_context.txt  web_search.txt
Testing/: Codex_Session.txt  OpenCode_Session.txt
agentalk-vision/: 01-vision-and-goals.md  02-architectural-findings.md  04-session-analysis.md  05-testing-plan.md
aisdk-source/: aisdk-0.5.2.crate
desktop/: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  CRITIQUE.md  DESIGN_DNA.md  EXECUTION_PLAN.md  FEATURES.md  SHIPPING_PLAN.md  byterover-spec.md  components.json  index.html  latest.json  package.json  spotlight.html  vite.config.ts
desktop/src-tauri/: .gitignore  Cargo.toml  orkestrate.txt  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: bench.rs  context.rs  db.rs  embed.rs  lib.rs  main.rs
desktop/src-tauri/src/agent/: learn.rs
desktop/src-tauri/src/ai/: auth.rs  handler.rs  mod.rs  paths.rs
desktop/src-tauri/src/ai/memory/: index.rs  manager.rs  mod.rs  service.rs  session.rs  storage.rs  types.rs
desktop/src-tauri/src/llm/: mod.rs
desktop/src-tauri/src/mcp/: mod.rs  transport.rs  types.rs
desktop/src-tauri/src/memory/: batch_queue.rs  gam.rs  gap_auditor.rs  learn.rs  mod.rs  recent_summary.rs  schema.rs  schema_mapper.rs
desktop/src-tauri/src/pscm/: graph.rs  ingest.rs  mod.rs  rerank.rs
desktop/src-tauri/src/pscm/agents/: causal_weaver.rs  context_compressor.rs  episodic_pruner.rs  trace_analyzer.rs
desktop/src-tauri/src/pscm/provider/: embed.rs
desktop/src-tauri/src/tools/: connect_memories.rs  mcp_wrapper.rs  mod.rs  reset_chat.rs  search_memory.rs  select_model.rs  web_fetch.rs  web_search.rs
diagrams/: gam-storage.mmd
docs/: plan.md
documentation/: Auth + Workspaces  ORKESTRATE_GOSPEL.md  PROJECT_DOCUMENTATION.md  claude_code_telemetry_format.md  codex_telemetry_format.md  git-workflow.md  opencode_renderer_system.md  opencode_telemetry_format.md  pricing-logic.md  telemetry_format_comparison.md
drizzle/: 0000_nice_madame_web.sql  0001_swift_ozymandias.sql  0002_thin_captain_america.sql  0003_agent_state_uniqueness.sql  0004_rooms_and_preferences.sql  0005_telemetry_hardening.sql  0006_orchestration_v1.sql  0007_auth_rooms_foundation.sql  0008_members_active_room.sql  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  context.rs  db.rs  embed.rs  lib.rs  timer.rs  vector.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/agents/: mod.rs  query_expander.rs  storage_classifier.rs
src-tauri/src/mcp/: client.rs  config.rs
src-tauri/src/memory/: compiler.rs  embedding.rs  embedding_queue.rs  gap_auditor.rs  learn.rs  mod.rs  recent_summary.rs  retrieve.rs  schema.rs  schema_mapper.rs  sigma.rs  store.rs  triage_extractor.rs
src-tauri/src/prompt/: mod.rs  orkestrate.txt
src-tauri/src/pscm/: db.rs  dream.rs  index.rs  retrieve.rs
src-tauri/src/pscm/agents/: concept_drift.rs  mod.rs  query_parser.rs
src-tauri/src/tools/: mod.rs  search_memory.rs  set_theme.rs  store_memory.rs
(+651 files in other folders)
