[package]
name = "orkestrate-desktop"
version = "0.1.0"
description = "Orkestrate — A memory agent that actually remembers"
authors = ["Orkestrate"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

