[package]
name = "orkestrate"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orkestrate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
futures = "0.3.32"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
once_cell = "1.21.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
open = "5"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-global-shortcut = "2"
url = "2.5.8"
window-vibrancy = "0.5"
